--- a/script/install
+++ b/script/install
@@ -1,6 +1,23 @@
 #!/usr/bin/env bash
 
+source "$pvm_lib/install"
+
+dputsx "install script start"
+
 # verify specified version
+check_exists
+if [ "$install_err_version" == "1" ];then
+    return 1
+fi
+dputsx "$0 ($LINENO): check_exists => OK"
+
+check_install_version
+if [ "$install_err_version" == "1" ];then
+    return 1
+fi
+dputsx "$0 ($LINENO): check_install_version => OK"
+
+# install version is invalid version
 
 # check installed versions
 
